Adding material icons, building on UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="ColorPrimary">#00a2e0</color>
     <color name="ColorSecondary">#ffec57</color>
     <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
 
