--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,78 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/ColorPrimary"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="zolostays.zolo.Activities.LoginActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/wrapper_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/edittext_phone"
+            android:textColorHint="@color/ColorSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_phone_white_24px"
+            android:drawablePadding="5dp"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/white"
+            android:inputType="text|number"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/wrapper_pass"
+        android:layout_below="@id/wrapper_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/edittext_password"
+            android:layout_width="match_parent"
+            android:drawableLeft="@drawable/ic_vpn_key_white_24px"
+            app:backgroundTint="@color/white"
+            android:textColor="@color/white"
+            android:textColorHint="@color/ColorSecondary"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <include
+        android:layout_height="wrap_content"
+        android:layout_below="@id/wrapper_pass"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/layout_register"
+        layout="@layout/item_primary_button" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_below="@id/layout_register"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:id="@+id/button_forgot"
+        android:text="Forgot your password?"/>
+
+    <include
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_forgot"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/register"
+        layout="@layout/item_secondary_button" />
+
 
 </RelativeLayout>
