--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,78 +1,80 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="@dimen/activity_vertical_margin"
+android:layout_width="match_parent"
     android:background="@color/ColorPrimary"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_vertical_margin"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true">
+
+<LinearLayout
     android:orientation="vertical"
-    tools:context="zolostays.zolo.Activities.LoginActivity">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/wrapper_phone"
+    <ImageView android:src="@drawable/ic_phone_white_24px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/edittext_phone"
-            android:textColorHint="@color/ColorSecondary"
+        android:layout_height="150dp"
+        android:layout_marginBottom="24dp"
+        android:layout_gravity="center_horizontal" />
+
+    <!-- Phone Number -->
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp">
+
+        <EditText android:id="@+id/et_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_phone_white_24px"
-            android:drawablePadding="5dp"
-            android:textColor="@color/white"
-            app:backgroundTint="@color/white"
-            android:inputType="text|number"/>
+            android:textColorHint="@color/ColorPrimary"
+            android:inputType="textEmailAddress"
+            android:hint="PHONE NUMBER" />
+
     </android.support.design.widget.TextInputLayout>
 
+    <!-- Password -->
     <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:id="@+id/wrapper_pass"
-        android:layout_below="@id/wrapper_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/edittext_password"
+        app:passwordToggleEnabled="true"
+        android:layout_marginBottom="8dp">
+        <EditText android:id="@+id/et_password"
             android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_vpn_key_white_24px"
-            app:backgroundTint="@color/white"
-            android:textColor="@color/white"
-            android:textColorHint="@color/ColorSecondary"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
-
+            android:textColorHint="@color/ColorPrimary"
+            android:inputType="textPassword"
+            android:hint="PASSWORD"/>
     </android.support.design.widget.TextInputLayout>
 
 
     <include
-        android:layout_height="wrap_content"
-        android:layout_below="@id/wrapper_pass"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/layout_register"
-        layout="@layout/item_primary_button" />
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_width="match_parent"
+    android:id="@+id/layout_login"
+    layout="@layout/item_primary_button" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TextView android:id="@+id/tv_forgot"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:text="Forgot your password?"
         android:textColor="@color/white"
-        android:layout_below="@id/layout_register"
-        android:layout_centerHorizontal="true"
-        android:padding="20dp"
-        android:id="@+id/button_forgot"
-        android:text="Forgot your password?"/>
+        android:gravity="center"
+        android:textSize="16dip"/>
 
     <include
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_forgot"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/register"
-        layout="@layout/item_secondary_button" />
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_centerHorizontal="true"
+    android:id="@+id/layout_register"
+    layout="@layout/item_secondary_button" />
 
-
-</RelativeLayout>
+</LinearLayout>
+</ScrollView>
