--- a/app/src/main/res/layout/item_secondary_button.xml
+++ b/app/src/main/res/layout/item_secondary_button.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textAllCaps="true"
         android:textStyle="bold"
