--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,12 +26,13 @@ android:fitsSystemWindows="true">
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp">
 
-        <EditText android:id="@+id/et_phone"
+        <EditText android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="20"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="textEmailAddress"
-            android:hint="PHONE NUMBER" />
+            android:hint="EMAIl" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -46,6 +47,7 @@ android:fitsSystemWindows="true">
         <EditText android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="20"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="textPassword"
             android:hint="PASSWORD"/>
