Building the forgot password view, presenter

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -10,20 +10,20 @@
     tools:context="zolostays.zolo.Activities.LoginActivity">
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"/>
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"/>
 
     <include
         layout="@layout/item_primary_button"
-        android:id="@+id/register"/>
+        android:id="@+id/layout_reset"/>
 
 
 </LinearLayout>
