Following MVP + Dagger approach --- building components, singletons, activity scope, contracts

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,18 +7,20 @@
     android:paddingLeft="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="zolostays.zolo.Activities.LoginActivity">
+    tools:context=".Modules.Login.LoginActivity">
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:inputType="textEmailAddress"/>
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:inputType="textPassword"/>
 
     <include
