--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:zoloLoginMainApplication="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/ColorPrimary"
     android:layout_height="match_parent"
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:id="@+id/wrapper_pass"
-            app:passwordToggleEnabled="true"
+            zoloLoginMainApplication:passwordToggleEnabled="true"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/et_password"
                 android:layout_width="match_parent"
