--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,31 +1,74 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:zoloLoginMainApplication="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:background="@color/ColorPrimary"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context=".Modules.Login.LoginActivity">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <EditText
-        android:id="@+id/et_email"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="textEmailAddress"/>
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp">
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="textPassword"/>
+        <TextView android:id="@+id/tv_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:text="LOG IN"
+            android:textColor="@color/white"
+            android:gravity="right"
+            android:textSize="12dp"/>
 
-    <include
-        layout="@layout/item_primary_button"
-        android:id="@+id/layout_reset"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textAllCaps="true"
+            android:text="Forgot password?"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="30dip"/>
 
+        <TextView android:id="@+id/tv_forgot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:textStyle="bold"
+            android:paddingBottom="20dp"
+            android:text="Please enter your registered email ID"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="16dip"/>
 
-</LinearLayout>
+        <!-- Email -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <EditText android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:maxLength="30"
+                android:lines="1"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/ColorPrimary"
+                android:inputType="textEmailAddress"
+                android:hint="EMAIL" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <include
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:id="@+id/layout_reset"
+            layout="@layout/item_primary_button" />
+
+    </LinearLayout>
+</ScrollView>
