Removing initial focus from EditTexts

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:background="@color/ColorPrimary"
     android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:fitsSystemWindows="true">
 
     <LinearLayout
