--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,6 +3,8 @@
     xmlns:zoloLoginMainApplication="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/white"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
@@ -25,16 +27,17 @@
             android:textStyle="bold"
             android:textSize="30dip"/>
 
-        <EditText android:id="@+id/et_phone"
+        <EditText android:id="@+id/et_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLength="20"
-            android:maxLines="1"
             android:background="@android:color/transparent"
+            android:layout_height="wrap_content"
             android:padding="10dp"
+            android:maxLength="20"
+            android:textColor="@color/ColorPrimary"
+            android:maxLines="1"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="none"
-            android:hint="PHONE NUMBER" />
+            android:hint="NAME" />
 
         <EditText android:id="@+id/et_email"
             android:layout_width="match_parent"
@@ -43,20 +46,24 @@
             android:background="@android:color/transparent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:textColor="@color/ColorPrimary"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="none"
             android:hint="EMAIL" />
 
-        <EditText android:id="@+id/et_name"
+        <EditText android:id="@+id/et_phone"
             android:layout_width="match_parent"
-            android:background="@android:color/transparent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:maxLength="20"
             android:maxLines="1"
+            android:textColor="@color/ColorPrimary"
+            android:background="@android:color/transparent"
+            android:padding="10dp"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="none"
-            android:hint="NAME" />
+            android:enabled="false"
+            android:hint="PHONE NUMBER" />
+
 
         <include
             android:layout_height="wrap_content"
