--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,13 +13,12 @@ android:fitsSystemWindows="true">
     <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp">
+    android:layout_height="wrap_content">
 
-    <ImageView android:src="@drawable/ic_phone_white_24px"
+    <ImageView android:src="@drawable/zolologo"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:scaleType="centerCrop"
         android:layout_marginBottom="24dp"
         android:layout_gravity="center_horizontal" />
 
@@ -28,6 +27,8 @@ android:fitsSystemWindows="true">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginBottom="8dp">
 
         <EditText android:id="@+id/et_email"
@@ -45,6 +46,8 @@ android:fitsSystemWindows="true">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:id="@+id/wrapper_pass"
         zoloLoginMainApplication:passwordToggleEnabled="true"
         android:layout_marginBottom="8dp">
@@ -61,6 +64,8 @@ android:fitsSystemWindows="true">
     <include
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
     android:layout_width="match_parent"
     android:id="@+id/layout_login"
     layout="@layout/item_primary_button" />
@@ -68,6 +73,8 @@ android:fitsSystemWindows="true">
     <TextView android:id="@+id/tv_forgot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:text="Forgot your password?"
@@ -78,6 +85,8 @@ android:fitsSystemWindows="true">
     <include
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
     android:layout_centerHorizontal="true"
     android:id="@+id/layout_register"
     layout="@layout/item_secondary_button" />
