1) Giving IDs to containers, 2) Adding focusability to parent of EditText

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/ll_container"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
