Adding drawable icons

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -60,6 +60,8 @@
                 android:layout_width="match_parent"
                 android:maxLength="30"
                 android:lines="1"
+                android:drawableLeft="@drawable/ic_email_white_24px"
+                android:drawablePadding="5dp"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/ColorPrimary"
                 android:inputType="textEmailAddress"
