--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@ android:fitsSystemWindows="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="20"
+            android:drawableLeft="@drawable/ic_email_white_24px"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="textEmailAddress"
             android:hint="EMAIl" />
@@ -54,6 +55,7 @@ android:fitsSystemWindows="true">
         <EditText android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_vpn_key_white_24px"
             android:maxLength="20"
             android:textColorHint="@color/ColorPrimary"
             android:inputType="textPassword"
